Establish line wrappable code preview with fixed line numbers

--- a/app-next/components/themes/theme-code-preview/theme-code-preview.module.sass
+++ b/app-next/components/themes/theme-code-preview/theme-code-preview.module.sass
@@ -4,20 +4,39 @@
 	@include inlayed
 
 	.window
-		margin: 0 5%
-		overflow: hidden
+		@include breakpoint($anyDesktop)
+			margin: 0 7.5%
+
+		@include breakpoint($anyMobile)
+			margin: 0
 
 		code
 			display: block
-			margin: 2rem 2.75rem
+			padding: 2rem 2.75rem
+			overflow: hidden
 
 			@include codeFont
 			color: $textColorOnDark
 
-			.lineNumber
-				color: $textColorFadedOnDark
-				padding-right: 2.75rem
-				white-space: pre-wrap
+			.line
+				$paneFactor: 0.935
+				font-size: $elementTextFontSize
+				line-height: 1.25rem
 
-			.lineContent
-				white-space: pre-wrap
+				@include breakpoint($anyMobile)
+					font-size: $elementTextFontSizeMobile
+					line-height: 1.35rem
+
+				.lineNumber, .lineContent
+					display: inline-block
+					vertical-align: top
+					white-space: pre-wrap
+				
+				.lineNumber
+					width: 100% - 100% * $paneFactor
+					box-sizing: border-box
+					color: $textColorFadedOnDark
+
+				.lineContent
+					width: 100% * $paneFactor
+					
